<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CodeCampKitchen</string>
    <string name="login">Login</string>
    <string name="email">E-Mail</string>
    <string name="all_items_nav_title">All Items</string>
    <string name="create_item_fragment_title">Create Item</string>
    <string name="edit_item_fragment_title">Edit Item</string>
    <string name="my_purchases">My Purchases</string>
    <string name="settings">Settings</string>
    <string name="barcode_toolbar_item_name">Scan Item</string>
    <string name="item_price">%1$.2f €</string>
    <string name="item_amount">x %d</string>
    <string name="item_amount_price">%d x %.2f €</string>
    <string name="item_amount_available">%1$d available</string>
    <string name="item_amount_not_available">not available</string>
    <string name="admin">Admin</string>
    <string name="create_add_button_menu">Create Item</string>
    <string name="barcode">Barcode / ID</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="kind">Kind</string>
    <string name="create">Create</string>
    <string name="one">1</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="purchase">Purchase</string>
    <string name="theNameText" translatable="false">Name</string>
    <string name="clear_all">Clear All</string>
    <string name="water">Water</string>
    <string name="juice">Juice</string>
    <string name="ice">Ice</string>
    <string name="coffee">Coffee</string>
    <string name="latte">Latte</string>
    <string name="espresso">Espresso</string>
    <string name="purchase_success">Purchase successful</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="confirm_purchase">Do you want to purchase these Items?</string>
    <string name="total_price">Total price: %1$.2f €</string>
    <string name="cancel">Cancel</string>
    <string name="item_not_found">Item not found</string>
    <string name="user">User</string>
    <string name="users">Users</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="shop">Shop</string>
    <string name="purchase_history">Purchase History</string>
    <string name="logout">Logout</string>
    <string name="amount_minimum_error">The minimum amount is %1$d</string>
    <string name="price_max_error">The maximum price is %1$d €</string>
    <string name="edit_user">Edit User</string>
    <string name="credit">Credit</string>
    <string name="edit_items">Edit Items</string>
    <string name="edit_user_successful">Successfully edited user</string>
    <string name="statistics">Statistics</string>
    <string name="generate_barcode">Generate ID</string>
    <string name="amount_of_bought_items">Overview - Items</string>
    <string name="credit_value">Credit: %1$.2f €</string>
    <string name="total_amount_text">Total: %1$.2f€</string>
    <string name="money_spent_text">Spent Money: %1$.2f€</string>
    <string name="total_number_text">Number of Items Sold: %d</string>
    <string name="purchased_items_text">Purchased Items: %d</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="connection_request">Please connect to a network</string>
    <string name="add_to_cart">Add to Shopping Cart</string>
    <string name="available">Available</string>
    <string name="edit_item_successful">Successfully edited item</string>
    <string name="create_item_successful">Successfully created item</string>
    <string name="save">Save</string>
    <string name="do_not_del_own_user">Your are not allowed to delete your own account</string>

    <!-- Hints -->
    <string name="name_hint">Type a Name</string>
    <string name="email_hint">Type an E-Mail</string>
    <string name="barcode_hint">Type a Barcode</string>
    <string name="price_hint">Type a Price</string>
    <string name="amount_hint">Type an Amount</string>
    <string name="credit_hint">Type the Credit</string>
	<string name="id_exists">An Item with this Barcode already exists</string>
    <string name="all_purchases">All Purchases</string>
</resources>
