<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_items"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/shop" />
        <item
            android:id="@+id/nav_my_purcheses"
            android:title="@string/purchase_history"
            android:icon="@drawable/ic_history_black_24dp" />
        <item
            android:id="@+id/nav_all_users"
            android:title="@string/users"
            android:icon="@drawable/ic_people_black_24dp"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            />
        <item
            android:title="@string/logout"
            android:id="@+id/nav_clear_user_data"
            android:icon="@drawable/ic_exit_to_app_black_24dp"/>
    </group>
</menu>