<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_create"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/create_add_button_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/editItem"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_scan_code"
        android:icon="@drawable/ic_linked_camera_white"
        android:title="@string/barcode_toolbar_item_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear_all"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/clear_all"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>