<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ui.StatisticsFragment">

	<LinearLayout android:id="@+id/statisticsLayout" android:layout_width="match_parent" android:orientation="vertical"
	              android:layout_height="match_parent">

		<LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
		              android:layout_height="wrap_content">
			<Button android:text="@string/my_purchases" android:layout_width="match_parent"
			        android:layout_height="wrap_content" android:id="@+id/myPurchasesButton"
			        android:layout_weight="1" />
			<Button android:text="@string/all_purchases" android:layout_width="match_parent"
			        android:layout_height="wrap_content" android:id="@+id/allPurchasesButton"
			        android:layout_weight="1" />
		</LinearLayout>

		<TextView android:id="@+id/moneySpentView" android:layout_width="match_parent"
		          android:layout_height="wrap_content" android:text="@string/money_spent_text"
		          android:textAlignment="center" android:textSize="18sp" />

		<TextView android:id="@+id/purchasedItemsView" android:layout_width="match_parent"
		          android:layout_height="wrap_content" android:text="@string/purchased_items_text"
		          android:textAlignment="center" android:textSize="18sp" />

		<com.github.mikephil.charting.charts.HorizontalBarChart android:id="@+id/chart" android:layout_width="match_parent"
		                                                        android:visibility="visible"
		                                                        android:layout_height="match_parent">

		</com.github.mikephil.charting.charts.HorizontalBarChart>

	</LinearLayout>
</FrameLayout>
