<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/barcodeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barcode"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/barcodeValueView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="18sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theNameText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/availableTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amountText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:singleLine="true"
            android:text="@string/one"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/minusButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:src="@drawable/ic_remove_white_24dp"
                android:text="@string/sub"
                android:textColor="@android:color/white" />

            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:src="@drawable/ic_add_white_24dp"
                android:text="@string/add"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_shopping_cart_white_24dp" />
</android.support.constraint.ConstraintLayout>