<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/barcodeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barcode"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/barcodeValueView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/generateIdButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generateBarcode" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0625"
            android:visibility="visible" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theNameText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/priceText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/amountText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/kindTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kind"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/kindSpinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:dropDownWidth="match_parent"
            android:spinnerMode="dialog" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/create"
            android:textColor="@android:color/white" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>